fixed bug with scroll bar visible on container

--- a/src/scss/layout/container.scss
+++ b/src/scss/layout/container.scss
@@ -4,7 +4,7 @@
   border-radius: 100px;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   @include media(mobile-landscape, height-small) {
     border: none;
